# cafibot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HERMIT.md  LICENSE  README.md  conftest.py  gateway.sh  hermit.sh  install.sh  mcp-server.sh  package.json  pyproject.toml  uninstall.sh
.claude/: settings.json
.dev/: harness-layer-c-trace.md  hermit_agent_spec.md  learner-spec.md  skill_trigger_collisions_analysis.md
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md
benchmarks/todo-api/starter/: pyproject.toml
benchmarks/todo-api/starter/src/todo/: __init__.py  app.py  models.py
benchmarks/todo-api/starter/tests/: test_app.py
docs/: agent-learner-integration.md  cc-setup.md  hermes-setup.md  hermit-variants.md  known-issues.md  measure-savings.md  open-source-positioning.md
hermit-ui/: package-lock.json  package.json
hermit_agent/: __main__.py  agent_session.py  auto_agents.py  autopilot.py  bridge.py  bridge_client.py  bridge_payloads.py  cli_setup.py  codex_channels_adapter.py  config.py  context.py  coordinator.py  deepinit.py  doctor.py  events.py  hooks.py  install_flow.py  interaction_presenter.py  interview.py  kb_learner.py  learner.py  learner_guard.py  learner_verification.py  llm_client.py  local_runtime.py  loop.py  mcp.py  mcp_actions.py  mcp_channel.py  mcp_gateway.py  mcp_server.py  mcp_sse_bridge.py  memory.py  permissions.py  plans.py  plugins.py  prd.py  profile_review.py  ralph.py  session.py  (+7 more)
ollama-proxy/: package.json  server.ts
scripts/: demo-session.sh  demo.tape  measure-savings.sh  (+1 more)
(+196 files in other folders)
