[project]
name = "todo-api-starter"
version = "0.1.0"
description = "Minimal FastAPI todo skeleton used by HermitAgent benchmarks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
